# OCR-AI-LPs-Classifier

./: .env  .gitignore  PROMPT_TEMPLATE.txt  README.md  extracted_info.json  model_output.json
ds/extracted_text/: 20240906_131209_combined.txt  20240906_131221.txt
ocr-meg-collection/: .env  LICENSE  README.md  model_output.json  pyproject.toml  requirements.txt
ocr-meg-collection/Prompts/: PROMPT_TEMPLATE.txt  SYSTEM_PROMPT.txt  USER_PROMPT.txt  prompt_final_raw.txt  prompt_mistral.txt  prompt_v0.txt  prompt_v1.txt  prompt_v2.txt
ocr-meg-collection/ds_pipeline/0_raw_ocr_txt/: LP2703_combined.txt  LP2704_combined.txt  LP2705_combined.txt  LP2706_combined.txt  LP2707_combined.txt  LP2708_combined.txt  LP2709_combined.txt  LP2710_combined.txt  LP2836_combined.txt  LP2837_combined.txt  LP2838_combined.txt  LP2839_combined.txt
ocr-meg-collection/ds_pipeline/1_json_inf_outputs/: LP2703_ai_output.json  LP2704_ai_output.json  LP2705_ai_output.json  LP2706_ai_output.json  LP2707_ai_output.json  LP2708_ai_output.json  LP2709_ai_output.json  LP2710_ai_output.json  LP2836_ai_output.json  LP2837_ai_output.json  LP2838_ai_output.json  LP2839_ai_output.json
ocr-meg-collection/ds_pipeline/2_raw_csv/: general_info.csv  track_info.csv
ocr-meg-collection/notebooks/: ocr_testing.ipynb  testing.ipynb
ocr-meg-collection/ocr_meg_collection/: ai_classification_inf.py  ai_classification_inf_debug.py  cleaner.py  main.py  ocr_pipeline.py  ocr_tesseract.py  post_processing.py  post_processing_debug.py  utils.py
ocr-meg-collection/tests/: easy_ocr_test.py  google-vision-api.py  ocr-pipeline-api.py  ocr_only_test.py  ocr_tesseract.py  ollama_inference.py  openai_inference.py  qt_file_input.py  quick_testing_post_process.py  transformers_inference.py  vertexai_inference.py
